--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,17 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="secondary">
     <ion-title>
-      Ionic Blank
+      Create Shopping List
     </ion-title>
+
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content>
+  <ion-list>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="addList()"><ion-icon name="add-circle"></ion-icon></button>
+       <ion-item *ngFor="let list of lists" (click)="viewList(list)">{{list.title}}</ion-item>
+    </ion-buttons>
+  </ion-list>
 </ion-content>
